[project]
name = "utkit"
version = "0.2.0"
description = "core libraries for development"
readme = "README.md"
authors = [
    { name = "TINS PJ", email = "tinspj1997@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
utkit = "utkit.cli:main"

[build-system]
requires = ["uv_build >= 0.11.8, <0.12.0"]
build-backend = "uv_build"
