[project]
name = "utkit"
version = "0.4.0"
description = "core libraries for development"
readme = "README.md"
authors = [
    { name = "TINS PJ", email = "tinspj1997@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=47.0.0",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "typer>=0.20.0",
    "zensical>=0.0.37",
]

[project.scripts]
utkit = "utkit.cli:main"

[build-system]
requires = ["uv_build >= 0.11.8, <0.12.0"]
build-backend = "uv_build"
