[project]
name = "utkit"
version = "0.10.0"
description = "core libraries for development"
readme = "README.md"
authors = [
    { name = "TINS PJ", email = "tinspj1997@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=47.0.0",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    
    "typer>=0.20.0",
    "zensical>=0.0.37",
]

[project.optional-dependencies]
api=[
 "slowapi>=0.1.9",
 "pydantic>=2.13.3",
]
standard=[
    "psutil>=7.2.2",
     "jinja2>=3.1.6",
]
store=[
     "redis>=7.4.0",
      "boto3>=1.43.2",
      "pymongo[srv]>=4.17.0",
]
all=[
    "slowapi>=0.1.9",
    "pydantic>=2.13.3",
    "psutil>=7.2.2",
    "jinja2>=3.1.6",
    "redis>=7.4.0",
    "boto3>=1.43.2",
    "pymongo[srv]>=4.17.0",
]

[project.scripts]
utkit = "utkit.cli:main"

[build-system]
requires = ["uv_build >= 0.11.8, <0.12.0"]
build-backend = "uv_build"
